# Duo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: backend.yml  firmware.yml  ml-ai.yml  mobile.yml
ai-inference/: README.md  pyproject.toml
backend/: README.md  docker-compose.yml  go.mod
backend/api/cmd/: main.go
docs/: phase_1_agents_and_architecture.md  phase_2_hardware_and_firmware.md  phase_3_backend_architecture.md  phase_4_mobile_app.md  phase_5_ai_system.md
duo-firmware-mvp/: README.md
duo-firmware-mvp/duo_firmware_mvp/: duo_firmware_mvp.ino
duo-mvp-app/: .gitignore  README.md  app.json  package-lock.json  package.json
duo-mvp-app/api/: .env.example  db.js  package-lock.json  package.json  server.js
duo-mvp-app/api/middleware/: auth.js
duo-mvp-app/api/routes/: auth.js  workouts.js
duo-mvp-app/app/: _layout.tsx  index.tsx  live.tsx
duo-mvp-app/app/(app)/: _layout.tsx  coach.tsx  history.tsx  index.tsx  library.tsx  profile.tsx  workout.tsx
duo-mvp-app/app/(auth)/: _layout.tsx  login.tsx  register.tsx  reset.tsx  setup.tsx  verify.tsx
duo-mvp-app/docs/: design-inventory.md
duo-mvp-app/src/: config.ts
duo-server/: .env.example  Dockerfile  go.mod
duo-server/migrations/: 001_init.up.sql  002_email_verification.up.sql  embed.go
firmware/: README.md
firmware/common/: duo_gatt_protocol.h
firmware/mvp/: CMakeLists.txt
hardware/: README.md
hardware/bom/: mvp_v0.csv
infra/: README.md
ml/: README.md
mobile/: README.md  package.json  tsconfig.json
scripts/: bootstrap.sh
web/: README.md  package.json
(+61 files in other folders)
