[project]
name = "duo-ai-inference"
version = "0.0.1"
description = "DUO AI inference service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "grpcio>=1.63",
    "grpcio-tools>=1.63",
    "lightgbm>=4.3",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "pandas>=2.2",
    "boto3>=1.34",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
